profiling-using-exp-runner/backup_FINAL_RESULTS/hessian_experiment/run_2_repetition_0/energibridge.log
sampling interval: 200, target function: hessian_lru_cache, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.hesssian as module; x_array = np.random.rand(10);x_tuple = tuple(x_array); module.hessian_lru_cache(x_tuple)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 8.082636768341064 for 0.23122358 sec of execution.
